traefik/hands-on/traefik-local/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-demo
  labels:
    purpose: traefik-hands-on
